added javascript, HTML, and CSS for weather cards and functionality, and searches stored in local storage to be displayed as history buttons which will rerun the function to display the weather once clicked.

--- a/Assets/css/app.css
+++ b/Assets/css/app.css
@@ -1,3 +1,26 @@
+.history {
+    margin: 20px;
+    padding: 20px;
+}
+
+.history button {
+    background-color: grey;
+    color: white;
+    padding: 10px;
+    margin: 10px;
+    text-align: center;
+}
+
+.history button:hover {
+    background-color: black;
+    transition: 0.5s ease-in-out;
+    cursor: pointer;
+}
+
+.history h5 {
+    border-bottom: 3px solid black;
+}
+
 .header {
     background-color: lightblue;
 }
@@ -5,4 +28,27 @@
 .logo {
     width: 150px;
     padding-right: 10px;
+}
+
+.card-height {
+    height: 300px;
+}
+
+.forecast-heading {
+    padding: 20px;
+    margin: 20px;
+    text-align: center;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    background-color: blue;
+    color: white;
+}
+
+.forecast-heading h4 {
+    border-bottom: 5px solid white;
+}
+
+.data-label {
+    font-weight: bolder;
 }
