--- a/Assets/css/app.css
+++ b/Assets/css/app.css
@@ -1,6 +1,7 @@
-.history {
+.history-menu {
     margin: 20px;
     padding: 20px;
+    border-bottom: 3px solid black;
 }
 
 .history button {
@@ -15,10 +16,6 @@
     background-color: black;
     transition: 0.5s ease-in-out;
     cursor: pointer;
-}
-
-.history h5 {
-    border-bottom: 3px solid black;
 }
 
 .header {
